fix: Fix letter-spacing value

--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -6,16 +6,19 @@ h2 {
 h1 {
   margin-top: 2em !important;
   font-size: 2.15em !important;
+  letter-spacing: -1.4px;
 }
 
 h2 {
   margin-top: 1.5em !important;
   margin-bottom: 0px !important;
   font-size: 1.5em !important;
+  letter-spacing: -1.4px;
 }
 
 h3 {
   font-size: 1.25em !important;
+  letter-spacing: -1.4px;
 }
 
 td:first-child {
